pihole-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: "pihole"
  labels:
    name: "pihole"
